--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>RegistrationFormAngular</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Abhilash Gupta">
+  <meta name="keywords" content="Registration Form">
+  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="description" content="Simple Registration Form" />
+
+  <title>RegistrationFormAngular</title>
+
+  <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
